--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "ethers": "^6.7.1",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "next-pwa": "^5.6.0",
