--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "ethers": "^5.7.2",
+    "firebase": "^10.4.0",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "next-pwa": "^5.6.0",
